# silentlink

./: docker-compose.yaml  init.sql  test_data.sql  tmp-init.sql
backend/: .env  Cargo.toml
backend/migrations/: 20250128221745_initial.sql
backend/src/: ag.rs  auth.rs  config.rs  edge.rs  error.rs  graph.rs  label.rs  main.rs  org.rs  utils.rs  vertex.rs
backend/src/auth/: endpoints.rs  middleware.rs  mod.rs  oauth_session.rs  oidc.rs  session.rs
backend/src/edge/: edge.rs  edge_types.rs  endpoints.rs  mod.rs
backend/src/graph/: endpoints.rs  graph.rs  mod.rs
backend/src/node/: endpoints.rs  mod.rs  node.rs  node_types.rs  validation.rs
backend/src/org/: endpoints.rs  mod.rs  org.rs
backend/src/user/: endpoints.rs  user.rs
backend/src/vertex/: endpoints.rs  mod.rs  validation.rs  vertex.rs
ui/: package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/app/auth-callback/: route.ts
ui/src/app/login/: page.tsx
