[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
dotenvy = "0.15.7"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
thiserror = "2.0.11"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
