[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
maplit = "1.0.2"
oauth2 = "5.0.0"
openidconnect = { version = "4.0", features = ["reqwest"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = [ "chrono", "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0.11"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.12.1", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
